# VisualMan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README  README.md  cpp.hint
downsample/: downsample.cpp
guibinding/: CMakeLists.txt
guibinding/glfwwindow/: CMakeLists.txt  vmglfwwindow.cpp  vmglfwwindow.h
guibinding/qt5widget/: CMakeLists.txt  vmqtwindow.cpp  vmqtwindow.h
imgui/: imgui_demo.cpp
resource/data/: mixfrac160x240x40.raw
resource/glsl/: blockraycasting_f.glsl  blockraycasting_v.glsl  entry_fs.glsl  entry_vs.glsl  phoneshadingfrag.glsl  phoneshadingvert.glsl  position_f.glsl  position_n_f.glsl  position_n_v.glsl  position_v.glsl  raycast_fs.frag  raycast_fs.glsl  raycast_vs.glsl  singlepassraycast_fs.glsl  singlepassraycast_vs.glsl  trivial_fs.glsl  trivial_no_illumination_fs.glsl  trivial_no_illumination_vs.glsl  trivial_vs.glsl
src/: CMakeLists.txt  main.cpp
src/abstractrender/: context.h  gpustate.h  render.cpp  render.h
src/accelerator/: bvh.cpp  bvh.h  kdtree.cpp  kdtree.h
src/algorithm/: marchingcubes.cpp  marchingcubes.h
src/application/: CMakeLists.txt  NOTE.md  app.h  application.cpp  application.h  event.h  eventhandler.h  glfwapplication.cpp  glfwapplication.h  glfwapplication2.cpp  glfwapplication2.h  guiapplication.cpp  guiapplication.h  largevolumeraycasterapplication.cpp  largevolumeraycasterapplication.h  openglapplication.cpp  openglapplication.h
src/cameras/: camera.cpp  camera.h  cameras.h  film.cpp  film.h  pbrcamera.cpp  pbrcamera.h  trackball.h
src/common/: CMakeLists.txt  allocation.h  allocator.h  arithmetic.h  basetype.h  blockarray.h  buffer.cpp  buffer.h  cachepolicy.cpp  cachepolicy.h  camera.h  cmdline.h  common.h  countedobject.h  dataarena.cpp  dataarena.h  error.cpp  error.h  filemappingplugininterface.cpp  filemappingplugininterface.h  film.h  genericcache.h  geometry.h  image.h  largevolumecache.cpp  largevolumecache.h  library.cpp  library.h  libraryloader.cpp  libraryloader.h  lineararray.h  linuxfilemap.h  lvdconverter.h  lvdheader.cpp  lvdheader.h  lvdreader.cpp  lvdreader.h  numeric.h  object.cpp  object.h  (+26 more)
src/core/: appearance.cpp  appearance.h  arithmetic.h  bound.cpp  bound.h  geometry.cpp  hsl_def.h  (+18 more)
src/graphic/: CMakeLists.txt  abstraarray.cpp  abstraarray.h  abstrarenderer.cpp  abstrarenderer.h  abstrarenderstate.cpp  abstrarenderstate.h  abstrarenderstudio.cpp  abstrarenderstudio.h  abstrascenemanager.h  abstravertexarray.h  abstrdraw.cpp  abstrdraw.h  actor.cpp  actor.h  actoreventcallback.cpp  actoreventcallback.h  art.cpp  art.h  assembly.cpp  assembly.h  blitframebuffer.h  bufferobject.cpp  bufferobject.h  camera.cpp  camera.h  drawarray.cpp  drawarray.h  drawelements.cpp  drawelements.h  enableset.h  eventinterface.h  framebuffer.cpp  framebuffer.h  framebufferobject.cpp  framebufferobject.h  globject.cpp  globject.h  gltexture.h  gltexture1d.cpp  (+60 more)
src/graphicfoundation/: CMakeLists.txt  appearance.cpp  appearance.h  graphicfoundation.h  interaction.cpp  interaction.h  interpulator.cpp  interpulator.h  marchingcubes.cpp  marchingcubes.h  material.cpp  material.h  materialreader.cpp  materialreader.h  plane.cpp  plane.h  scene.h  shape.cpp  shape.h  spectrum.h  sphere.cpp  sphere.h  tfgenerator.cpp  tfgenerator.h  triangle.cpp  triangle.h
src/lvdrenderer/: CMakeLists.txt  TinyConsole.cpp  TinyConsole.h  abstrgpucache.cpp  abstrgpucache.h  abstrgpucacheblockmanager.cpp  abstrgpucacheblockmanager.h  abstrgpucachefaulthandler.cpp  abstrgpucachefaulthandler.h  application.cpp  application.h  bufferobject.h  event.h  framebuffer.cpp  framebuffer.h  glfwapplication.cpp  glfwapplication.h  gpucacheblockmanager.cpp  gpucacheblockmanager.h  gpucachefaulthandler.cpp  gpucachefaulthandler.h  gpupagetable.h  gpuvolumedatacache.h  guiapplication.cpp  guiapplication.h  imguibase.h  largevolume_test.cpp  largevolumeraycasterapplication.cpp  largevolumeraycasterapplication.h  lodaggregate.cpp  lodaggregate.h  openglbuffer.cpp  openglbuffer.h  openglcontext.cpp  openglcontext.h  openglutils.h  openglvertexarrayobject.cpp  openglvertexarrayobject.h  shader.cpp  shader.h  (+8 more)
src/plugins/io/: CMakeLists.txt  config.h  linuxfilemap.cpp  linuxfilemap.h  lvdfilereader.cpp  lvdfilereader.h  lz4filereader.cpp  lz4filereader.h  windowsfilemap.cpp  windowsfilemap.h
src/test/: CMakeLists.txt  largevolume_test.cpp  vmglfwwindow_test.cpp  vmqtwindow_test.cpp
src/visualman/: CMakeLists.txt  abstraarray.cpp  abstraarray.h  abstrarenderer.cpp  abstrarenderer.h  abstrarenderstate.cpp  abstrarenderstate.h  abstrarenderstudio.cpp  abstrarenderstudio.h  abstrascenemanager.h  abstravertexarray.h  abstrdraw.cpp  abstrdraw.h  actor.cpp  actor.h  actoreventcallback.cpp  actoreventcallback.h  art.cpp  art.h  blitframebuffer.cpp  blitframebuffer.h  bufferobject.cpp  bufferobject.h  camera.cpp  camera.h  drawarray.cpp  drawarray.h  drawelements.cpp  drawelements.h  enableset.h  eventinterface.h  framebuffer.cpp  framebuffer.h  framebufferobject.cpp  framebufferobject.h  frustum.cpp  frustum.h  graphicsbooster.cpp  graphicsbooster.h  graphictype.h  (+44 more)
test/: CMakeLists.txt  abcflowgen.cpp  abcflowgen.h  application_test.cpp  downsample.cpp  largevolume_test.cpp  newgraphicapi_test.cpp  printvolume.cpp  test.cpp  vm_feature_test.cpp  vmglfwwindow_test.cpp  vmlargevolumeraycast_test.cpp  vmqtwindow_test.cpp
test/vmapps/: CMakeLists.txt  config.h  oocactorcallback.cpp  oocactorcallback.h  oocprimitive.cpp  oocprimitive.h  oocresources.cpp  oocresources.h  vm_isosurface.cpp  vm_isosurface.h  vm_largevolumeraycast.cpp  vm_largevolumeraycast.h  vm_mesh.cpp  vm_mesh.h  vm_multipassraycast.cpp  vm_multipassraycast.h  vm_volumeraycast.cpp  vm_volumeraycast.h
tools/: CMakeLists.txt  block2raw.cpp  blockextractor.cpp
tools/abcflowgen/: CMakeLists.txt  abcflowgen.cpp  abcflowgen.h  gen.cpp
tools/downsample/: CMakeLists.txt  downsample.cpp
tools/lvdcompression/: CMakeLists.txt  lvd2lz4encoder.cpp
tools/lvdconverter/: CMakeLists.txt  lvdconverter.cpp
tools/subregion/: CMakeLists.txt  subregion.cpp
(+175 files in other folders)
